--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server-dev": "nodemon server.js",
+    "server:dev": "nodemon server.js",
     "seeds": "mongo < db/seeds.js"
   },
   "keywords": [],
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "cors": "^2.8.5",
-    "nodemon": "^2.0.8"
+    "nodemon": "^2.0.8",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.9"
   }
 }
